# ChangeLog for media-libs/aalib
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/aalib/ChangeLog,v 1.32 2007/02/17 17:21:56 grobian Exp $

  17 Feb 2007; Fabian Groffen <grobian@gentoo.org> -files/aalib-osx.patch,
  aalib-1.4_rc4-r2.ebuild, aalib-1.4_rc5.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  13 Feb 2007; Jeroen Roovers <jer@gentoo.org> aalib-1.4_rc5.ebuild:
  Stable for HPPA (bug #165617).

  10 Feb 2007; nixnut <nixnut@gentoo.org> aalib-1.4_rc5.ebuild:
  Stable on ppc wrt bug 165617

  06 Feb 2007; Raúl Porcel <armin76@gentoo.org> aalib-1.4_rc5.ebuild:
  x86 stable wrt bug 165617

  04 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> aalib-1.4_rc5.ebuild:
  Fix linking of aalib.so

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> aalib-1.4_rc5.ebuild:
  Stable on Alpha.

  09 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  aalib-1.4_rc5.ebuild:
  Stable on ppc64.

  08 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/aalib-1.4_rc5-osx.patch, aalib-1.4_rc5.ebuild:
  Replace the osx patch with a more generic sed line that works for FreeBSD,
  too. Add ~x86-fbsd keyword.

  04 Apr 2006; Aron Griffis <agriffis@gentoo.org> aalib-1.4_rc5.ebuild:
  Mark 1.4_rc5 stable on ia64

  03 Apr 2006; Jeremy Huddleston <eradicator@gentoo.org>
  aalib-1.4_rc4-r2.ebuild, aalib-1.4_rc5.ebuild:
  Stable amd64 and sparc.  Fixed modular X deps on older version.

  08 Nov 2005; <dang@gentoo.org> aalib-1.4_rc5.ebuild:
  Modular X deps

  30 Jun 2005; Aron Griffis <agriffis@gentoo.org> aalib-1.4_rc4-r2.ebuild,
  aalib-1.4_rc5.ebuild:
  Fix use invocation

  13 May 2005; Lina Pezzella <j4rg0n@gentoo.org> aalib-1.4_rc4-r2.ebuild,
  aalib-1.4_rc5.ebuild:
  Bug Fix 92082

  09 May 2005; Lina Pezzella <j4rg0n@gentoo.org> +files/aalib-1.4_rc5-osx.patch,
  aalib-1.4_rc4-r2.ebuild, aalib-1.4_rc5.ebuild:
  Fix for Bug 91630. rc4 stable on ppc-macos.

*aalib-1.4_rc5 (03 May 2005)
