@@ -7,14 +7,14 @@ MD5 224b7aa8488763f7d7b4bfa63948adef files/aalib-1.4_rc4-m4.patch 241
 RMD160 8da68015ba2e16647f281aebd59bcc0329fe9954 files/aalib-1.4_rc4-m4.patch 241
 SHA256 24d09cb9eb9ed8d0990c677b5fbfe43762fe872d198c146c7de6fdb39eab692f files/aalib-1.4_rc4-m4.patch 241
 DIST aalib-1.4rc5.tar.gz 391028 RMD160 a10bcab16d3aa0e60facca3e989f6a51846885f6 SHA1 a23269e950a249d2ef93625837cace45ddbce03b SHA256 fbddda9230cf6ee2a4f5706b4b11e2190ae45f5eda1f0409dc4f99b35e0a70ee
-EBUILD aalib-1.4_rc5.ebuild 1472 RMD160 f8b611007352d5f0fb5fb343cd33cb36222bba77 SHA1 01a8fd8f6bbad15728026398856d7a9675fb84b0 SHA256 6753edab776340fb30a01e209ef594ea1da900e31b32e33519e7f35ba05c26b4
-MD5 ea26c03822f2ecdf2e2de7800aa0bd4b aalib-1.4_rc5.ebuild 1472
-RMD160 f8b611007352d5f0fb5fb343cd33cb36222bba77 aalib-1.4_rc5.ebuild 1472
-SHA256 6753edab776340fb30a01e209ef594ea1da900e31b32e33519e7f35ba05c26b4 aalib-1.4_rc5.ebuild 1472
-MISC ChangeLog 4154 RMD160 4cf22b9e6fc205dcb82ff997e38bafe534bbcba3 SHA1 8e76bc4254b6c68f3d41f8cff25248c657b194d3 SHA256 81013c08984d3cc27bef2f4633198f1296764e57fe0ae1ed12000eed0919ef42
-MD5 b38e23cfc021e016b3556854ee3b4d19 ChangeLog 4154
-RMD160 4cf22b9e6fc205dcb82ff997e38bafe534bbcba3 ChangeLog 4154
-SHA256 81013c08984d3cc27bef2f4633198f1296764e57fe0ae1ed12000eed0919ef42 ChangeLog 4154
+EBUILD aalib-1.4_rc5.ebuild 1591 RMD160 a08eea1d261abf9484bd2c0a77585d3f0063b083 SHA1 10416f4bbd7ae4ce89486e0c21297670be5b7777 SHA256 bcea849ceca3a2db0fb227af3eae3f5c38a4cd42bb873e6a032bb45a8b08ebb0
+MD5 cb64dd7ea332f57fb0d84b34fdbab1aa aalib-1.4_rc5.ebuild 1591
+RMD160 a08eea1d261abf9484bd2c0a77585d3f0063b083 aalib-1.4_rc5.ebuild 1591
+SHA256 bcea849ceca3a2db0fb227af3eae3f5c38a4cd42bb873e6a032bb45a8b08ebb0 aalib-1.4_rc5.ebuild 1591
+MISC ChangeLog 4280 RMD160 830dbd2f6b491862d0b7bd5e6bfdeef20f801ce9 SHA1 04d9a25891e6d7fc5d25fd87d63504b7181033ae SHA256 0f691fa7013b93dbaeaeed3ed60a05636ab2f9618dface051153b27a1e486c00
+MD5 6e895d10497f352e3719502e3e0995ad ChangeLog 4280
+RMD160 830dbd2f6b491862d0b7bd5e6bfdeef20f801ce9 ChangeLog 4280
+SHA256 0f691fa7013b93dbaeaeed3ed60a05636ab2f9618dface051153b27a1e486c00 ChangeLog 4280
 MISC metadata.xml 259 RMD160 d1f5ea37202987c54db9697175a55e5609386654 SHA1 d7234631415b27fa166f13d440f0ea6e4d3f1044 SHA256 14f1bab6a31d434eda6319b2783239e50179d75501edb6e255bb6c3e665418cf
 MD5 c1e212329f9083e2405b16dd382d6632 metadata.xml 259
 RMD160 d1f5ea37202987c54db9697175a55e5609386654 metadata.xml 259
